app/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: finapp
  labels:
    # Enforce restricted Pod Security standards
    pod-security.kubernetes.io/enforce: "restricted"
    pod-security.kubernetes.io/enforce-version: "latest"
