app/k8s/base/svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: finapp
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 8080
