app/k8s/base/netpol-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: finapp
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
